# tock-registers

./: .gitignore  .lcignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml  license_check.yaml
codegen/: Cargo.toml  README.md
codegen/src/: ast.rs  block.rs  block_test_all_fields.rs  block_test_docs.rs  block_test_empty.rs  block_test_offsets.rs  lib.rs  parse.rs  parse_tests.rs  single.rs  single_test_array.rs  single_test_basic.rs  single_test_docs.rs  single_test_scalar.rs  test_util.rs
doc/: AddingRegisterTypes.md  Glossary.md  ParseErrorRecovery.md  RegisterSlice.md  Terminology.md  UnitTesting.md
doc/experimental/: ParseErrorRecovery.md
examples/: doc_comments.rs  generics.rs  rng.rs  rng_full.rs  rng_simplified.rs  safe_dma.rs  typestate.rs
expand_macros/: Cargo.toml  README.md
expand_macros/src/: main.rs
expand_macros/test/: Cargo.toml  README.md
expand_macros/test/src/: unexpanded.rs
macros/: Cargo.toml  README.md
macros/src/: ast.rs  block.rs  block_test_all_fields.rs  block_test_docs.rs  block_test_empty.rs  block_test_offsets.rs  lib.rs  parse.rs  parse_tests.rs  single.rs  single_test_basic.rs  single_test_docs.rs
multi_crate_test/: README.md
multi_crate_test/child/: Cargo.toml  README.md
multi_crate_test/child/src/: lib.rs
multi_crate_test/parent/: Cargo.toml  README.md
multi_crate_test/parent/src/: lib.rs
nightly/: rust-toolchain.toml
src/: array.rs  bus.rs  data_type.rs  debug.rs  fake_register.rs  fields.rs  interfaces.rs  internal.rs  layouts.rs  lib.rs  local_register.rs  map.rs  mmio.rs  read.rs  register_trait.rs  registers_macro.rs  unsafe_read.rs  unsafe_write.rs  write.rs
tests/: all_block_fields.rs  array.rs  generic_op.rs  many_lints.rs  mmio.rs  nested_arrays.rs  no_prelude.rs  same_names.rs  send_register.rs
tests/multi_crate/: README.md
tests/multi_crate/child/: Cargo.toml
tests/multi_crate/parent/: Cargo.toml
