# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2026.
# Copyright Better Bytes 2026.

[package]
name = "tock-registers-macros"
version.workspace = true
authors.workspace = true
description = "Proc macros for tock-registers"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true
