# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2026.
# Copyright Better Bytes 2026.

# We want to test that you can:
# 1. Run tock-registers-expand-macros to expand a source code file.
# 2. Build the resulting source code with tock-registers' proc_macros feature
#    disabled.
# This crate enables that test. The test itself is performed by the
# expand_macros_test make action. This crate is not part of the repository-wide
# workspace so that expand_macros_test does not race with workspace-wide test
# commands.
[workspace]

[package]
name = "expand-macros-test"
edition = "2021"
publish = false
version = "0.1.0"

[dependencies.tock-registers]
default-features = false
features = ["register_types"]
path = "../.."
