# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2026.
# Copyright Better Bytes 2026.

[package]
name = "multi_crate_child"
authors.workspace = true
homepage.workspace = true
publish = false
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
multi_crate_parent.path = "../parent"
tock-registers.path = "../../.."
